# simple_counter

./: Cargo.toml  README.md  rust-toolchain.toml
app/: Cargo.toml
app/src/: increment.rs  init.rs  lib.rs
counter/: Cargo.toml
counter/src/: lib.rs
counter_logic_circuit/: Cargo.toml
counter_logic_circuit/guest/: Cargo.toml
counter_logic_circuit/guest/src/: main.rs
