[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
counter = { path = "../counter" }
arm = { git = "https://github.com/anoma/arm-risc0.git", tag = "v0.2.0" }
rand = "0.8"
# risc0-zkvm = "2.1.0"
risc0-zkvm = { version = "2.1.0", features = ["std", "unstable"], default-features = false }
lazy_static = "1.5.0"
hex = "0.4"
